[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/PlayerBut1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/PlayerBut2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/PlayerBut3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/PlayerBut1B.png" type="Texture" id=4]
[ext_resource path="res://Sprites/PlayerBut2B.png" type="Texture" id=5]
[ext_resource path="res://Sprites/PlayerBut3B.png" type="Texture" id=6]
[ext_resource path="res://Sprites/PlayerBut4B.png" type="Texture" id=7]
[ext_resource path="res://Sprites/PlayerBut4.png" type="Texture" id=8]
[ext_resource path="res://Scripts/PlayersChoose/P3.gd" type="Script" id=9]
[ext_resource path="res://Scripts/PlayersChoose/P4.gd" type="Script" id=10]
[ext_resource path="res://Scripts/PlayersChoose/P1.gd" type="Script" id=11]
[ext_resource path="res://Scripts/PlayersChoose/P2.gd" type="Script" id=12]
[ext_resource path="res://SoundEffects/Sel1.wav" type="AudioStream" id=13]
[ext_resource path="res://Scripts/PlayerCount.gd" type="Script" id=14]
[ext_resource path="res://Anims/ScenesStartAnim.tres" type="Animation" id=15]
[ext_resource path="res://SoundEffects/StartUI.wav" type="AudioStream" id=16]

[node name="Players" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerButtons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -80.0
margin_right = 512.0
margin_bottom = 80.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( -414, -228 )
alignment = 1

[node name="P1" type="TextureButton" parent="PlayerButtons"]
margin_left = 120.0
margin_right = 280.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 82, 76 )
disabled = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
script = ExtResource( 11 )

[node name="space1" type="Control" parent="PlayerButtons"]
margin_left = 284.0
margin_right = 324.0
margin_bottom = 160.0
rect_min_size = Vector2( 40, 160 )

[node name="P2" type="TextureButton" parent="PlayerButtons"]
margin_left = 328.0
margin_right = 488.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 86, 77 )
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
script = ExtResource( 12 )

[node name="space2" type="Control" parent="PlayerButtons"]
margin_left = 492.0
margin_right = 532.0
margin_bottom = 160.0
rect_min_size = Vector2( 40, 160 )

[node name="P3" type="TextureButton" parent="PlayerButtons"]
margin_left = 536.0
margin_right = 696.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 84, 77 )
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
script = ExtResource( 9 )

[node name="space3" type="Control" parent="PlayerButtons"]
margin_left = 700.0
margin_right = 740.0
margin_bottom = 160.0
rect_min_size = Vector2( 40, 160 )

[node name="P4" type="TextureButton" parent="PlayerButtons"]
margin_left = 744.0
margin_right = 904.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 86, 78 )
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
script = ExtResource( 10 )

[node name="StartAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/StartAnim = ExtResource( 15 )

[node name="Sel3" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 13 )
volume_db = -20.0
pitch_scale = 1.5

[node name="Sel4" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 13 )
volume_db = -20.0
pitch_scale = 1.2

[node name="StartHere" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -25.0
pitch_scale = 0.9

[connection signal="pressed" from="PlayerButtons/P1" to="PlayerButtons/P1" method="_on_P1_pressed"]
[connection signal="pressed" from="PlayerButtons/P2" to="PlayerButtons/P2" method="_on_P2_pressed"]
[connection signal="pressed" from="PlayerButtons/P3" to="PlayerButtons/P3" method="_on_P3_pressed"]
[connection signal="pressed" from="PlayerButtons/P4" to="PlayerButtons/P4" method="_on_P4_pressed"]
